--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -364,11 +364,14 @@ body {
 }
 
 .main-notation-search .btn {
-  margin-right: 10px;
+  margin-right: 4px;
+  height: 40px;
+  margin-bottom: 4px;
 }
 .sml-search{
-  padding: 3px 10px;
-
+  padding: 5px 6px;
+  height: 40px;
+  border-radius: 4px;
 }
 /* MAIN- TABLE */
 .main-content__table {
